tests/ui/parser/recover/recover-struct.rs
fn main() {
    struct Test {
        Very
        Bad //~ ERROR found `Bad`
        Stuff
    }
}
